Practiced for of loop

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="objectLiteralChallenge.js" charset="utf-8"></script>
+  <!-- <script src="objectLiteralChallenge.js" charset="utf-8"></script> -->
+  <script src="forOfLoopChallenge.js" charset="utf-8"></script>
+
 </body>
 </html>
