Practiced padStart, padEnd, as well as Async and Await

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <!-- <script src="objectLiteralChallenge.js" charset="utf-8"></script> -->
-  <script src="forOfLoopChallenge.js" charset="utf-8"></script>
+  <!-- <script src="forOfLoopChallenge.js" charset="utf-8"></script> -->
+  <script src="padStartandEndChallenge.js" charset="utf-8"></script>
+
 
 </body>
 </html>
